editing field details, styling changes

--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
         .tableHeader, .tableBody {
             display:table-row;
         }
-        .tableHeader > div, .tableBody > div{
+        .tableHeader  div, .tableBody  div{
             display:table-cell;
         }
     </style>
@@ -40,6 +40,8 @@
             </div>
         </div>
         <div class="tableBody">
+        <section>
+            
             <div>
                 Col 1 Value
             </div>
@@ -49,6 +51,7 @@
             <div>
                 Col 3 Value
             </div>
+        </section>
         </div>
     </div>
 </body>
