--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <root-component>Loading...</root-component>
+    <root-component>
+      <h3>Please wait. Loading...</h3>
+    </root-component>
   </body>
 </html>
